--- a/Styles/main.css
+++ b/Styles/main.css
@@ -32,6 +32,7 @@ body {
     width: 50px;
     height: 50px;
     float: left;
+    position: relative;
 }
 
 .aliens-container > div img {
@@ -65,4 +66,12 @@ body {
     position: relative;
     /*z-index: 100;*/
     margin-left: 12px;
+}
+
+.alien-bullet {
+    height: 20px;
+    width: 5px;
+    top: 1px;
+    background-color: red;
+    position: relative;
 }
